Fixed size of paragraph elements and vertically alignment of image on Home page at top

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,7 @@
 body {
     padding: 0 150px;
 }
+
+p {
+  font-size: 1.57em;
+}
